# Authoring_Tools_4_product_tagging

./: .gitignore  CMakeLists.txt  README.md
Netzyn/: Netzyn.pro  dataparser.cpp  dataparser.h  main.cpp  netzynserver.cpp  netzynserver.h  thread.cpp  thread.h
NetzynClient/: NetzynClient.pro  dataparser.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netzynclient.cpp  netzynclient.h
NetzynClient-build-Desktop-Release/: Makefile  NetzynClient  moc_mainwindow.cpp  moc_netzynclient.cpp  ui_mainwindow.h
Qt-object/: vios_gui.cpp
Qt-object/vios_gui/: face.cpp  face.h  general.h  vios_gui.cpp  vios_gui.h  vios_gui.ui
Qt-object/vios_gui-build-Desktop-Release/: Makefile  moc_vios_gui.cpp  ui_vios_gui.h  vios_gui
docs/: project_proposal.docx
img/GUI/: object-detection
include/: face.h  general.h  render.h
mike_cook_comcast/: bbt_bat_jar_conjecture.xml  bbt_s01_e13.xml  comcast_hd.xml  comcast_hd_small.xml  light_trigger.xsd  meeting minutes.txt  obj_detect.xsd  object_detect.xsd  object_detection  object_detection.cpp  object_detection.xsd  pennSample.xml  test  test.cpp  test.xml  test.yml  testxml  testxml.cpp
qt/facerec/: facerec.pro.user.449a324
qt/facerec-build-Desktop-Release/: Makefile  moc_facerec.cpp  ui_facerec.h
src/: BoundingBox.cpp  audio_conv.cpp  collect_samples.cpp  face.cpp  facerec  facerec.cpp  facerec2  facerec2.cpp  main  main.cpp  main1.cpp  main2.cpp  main_old.cpp  obj_det.cpp  obj_detect  obj_detect.cpp  render.cpp  train.csv  vid2img.cpp
videoPlay/: main.cpp  videoPlay.pro  videoplay.cpp  videoplay.h  videoplay.ui
(+58 files in other folders)
